--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "devDependencies": {
     "@playwright/test": "^1.52.0",
+    "@types/node": "^22.15.23",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
