--- a/package.json
+++ b/package.json
@@ -4,15 +4,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-   
+    "report:allure": "allure generate allure-results --clean -o allure-report && allure open allure-report",
     "auth:admin": "ENV=dev ROLE=admin ts-node tests/auth/setup/generate-auth.ts",
     "auth:tech": "ENV=dev ROLE=technician ts-node tests/auth/setup/generate-auth.ts",
     "auth:viewer": "ENV=dev ROLE=viewer ts-node tests/auth/setup/generate-auth.ts",
-  
     "auth:admin:stage": "ENV=stage ROLE=admin ts-node tests/auth/setup/generate-auth.ts",
     "auth:tech:stage": "ENV=stage ROLE=technician ts-node tests/auth/setup/generate-auth.ts",
     "auth:viewer:stage": "ENV=stage ROLE=viewer ts-node tests/auth/setup/generate-auth.ts",
-  
     "auth:admin:prod": "ENV=prod ROLE=admin ts-node tests/auth/setup/generate-auth.ts",
     "auth:tech:prod": "ENV=prod ROLE=technician ts-node tests/auth/setup/generate-auth.ts",
     "auth:viewer:prod": "ENV=prod ROLE=viewer ts-node tests/auth/setup/generate-auth.ts"
@@ -24,10 +22,12 @@
   "devDependencies": {
     "@playwright/test": "^1.52.0",
     "@types/node": "^22.15.23",
+    "allure-playwright": "^3.2.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "dotenv": "^16.5.0"
   }
 }
